[tool.poetry]
name = "epanetparser"
version = "0.1.0"
description = "A parser and toolkit for EPANET networks represented in WNTR JSON format"
authors = ["Paul Slavin <pmslavin@gmail.com>", "Tomasz Janus <tomasz.k.janus@gmail.com>"]

# Main package (networks folder is now inside epanetparser/)
packages = [
    { include = "epanetparser" }
]

# Force include extra networks even though gitignored
include = [
    { path = "epanetparser/networks/extra/**/*", format = ["sdist", "wheel"] }
]

# Optionally include documentation and tests in distribution
# include = [
#     "docs/**/*",
#     "tests/**/*"
# ]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.2.0"
gdown = "^6.0.0"
wntr = "^1.4.0"

[tool.poetry.scripts]
epanetparser = "epanetparser.core.parse:run"
epanetparser-plugins = "epanetparser.core.plugins_cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pudb = "^2022.1.1"
coverage = "^6.3.2"
pyflakes = "^2.4.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
nox = "^2022.1.7"
sphinx = "^5"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-config",
    "--strict-markers"
]
xfail_strict = true
testpaths = ["tests"]


[mypy]
python_version = "3.8.10"

